# mike-cox-protruding

./: .commitlintrc.json  .dockerignore  .drone.yml  .env.example  .gitignore  Dockerfile  LICENSE  PROTOCOL_REFERENCE.md  README.md  README_old.md  SDK_PATTERNS.md  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  push.yaml  release.yaml
.husky/: commit-msg  pre-commit
mcp-server/: .dockerignore  .drone.yml  .env.dev  .env.example  .env.production  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  database.py  influxdb_manager.py  main.py  mongodb_manager.py  pyproject.toml  server.py  tools.py
mcp-server/influxdb_db/: __init__.py  manager.py  resources.py  tools.py
mcp-server/mongodb_db/: __init__.py  manager.py  resources.py  tools.py
mcp-server/postgres_db/: __init__.py  manager.py  resources.py  tools.py
mcp-server/redis_db/: __init__.py  manager.py  resources.py  tools.py
prompts/: mcp-development.md
src/: index.ts  registrations.ts
src/prompts/: index.ts
src/resources/: index.ts  influxdb.ts  mongodb.ts  postgres.ts  redis.ts
src/tools/: index.ts  influxdb.ts  mongodb.ts  postgres.ts  redis.ts
src/types/: session.ts
tests/: mcp-client-test.js  mcp-client-test.mjs  setup.ts  simple-test.js  simple-test.mjs  test-resources.mjs
tests/unit/: basic.test.ts
validation/: test-mcp-client.js  validate-bash.sh  validate-simple.js
