[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "mcp[cli]>=1.9.3",
    "redis>=5.0.0",
    "motor>=3.3.0",
    "influxdb-client>=1.40.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
]
