[project]
name = "mcp-server"
version = "0.1.0"
description = "Database MCP Server with PostgreSQL, Redis, MongoDB, and InfluxDB support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "mcp[cli]>=1.9.3",
    "redis>=5.0.0",
    "motor>=3.3.0",
    "influxdb-client>=1.40.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = []

[tool.bandit]
exclude_dirs = ["tests", "__pycache__"]
